# SimpleGP

./: .gitignore  CMakeLists.txt  readme.md
DBScripts/: add_algorithm.sql  add_states.sql  add_tlp_problem.sql  create.sql
GeneratorFiles/: CodeDash.xml  DashLogger.xml  ScoreUtils.xml  Session.xml  TestRepo.xml
Resources/: config.xml  dbconnect.xml
Resources/Input/: problem_0000.arff
SimpleGP/: CMakeLists.txt  Engine.cpp  Engine.h  Source.cpp
SimpleGPLib/: ArgUtils.cpp  ArgUtils.h  CMakeLists.txt  Candidate.cpp  Candidate.h  CandidateFactory.cpp  CandidateFactory.h  CodeDash.cpp  CodeDash.h  DashLogger.cpp  DashLogger.h  Globals.h  Logger.h  Mutation.cpp  Mutation.h  ScoreFinder.cpp  ScoreFinder.h  ScoreUtils.cpp  ScoreUtils.h  Socket.cpp
SimpleGPLib/Grammar/: BooleanStatement.cpp  BooleanStatement.h  BreadthIterator.cpp  BreadthIterator.h  CodeTree.cpp  CodeTree.h  CodeTreeFactory.cpp  CodeTreeFactory.h  Comparison.cpp  Comparison.h  DecisionNode.cpp  DecisionNode.h  GeneSelector.h  LiteralNode.cpp  LiteralNode.h  Mutator.cpp  Mutator.h  NodeBase.h
SimpleGPTests/: CMakeLists.txt
SimpleGPTests/Helpers/: Candidate.h  CandidateFactory.h  Mutation.h  ScoreFinder.h  Session.h  TestRepo.cpp  TestRepo.h  TreeHelpers.h
SimpleGPTests/Tests/: BooleanStatement_Tests.cpp  BreadthIterator_Tests.cpp  Breed_Tests.cpp  CandidateSelector_Tests.cpp  CodeDash_Tests.cpp  CodeTreeFactory_Tests.cpp  CodeTree_Tests.cpp  DashLogger_Tests.cpp  DecisionNode_Tests.cpp  Example_Tests.cpp  Memory_Tests.cpp  Mutator_Tests.cpp  ScoreUtils_Tests.cpp
